--- a/.Net.md
+++ b/.Net.md
@@ -3,7 +3,7 @@ CÔNG TY CỔ PHẦN PHẦN MỀM QUỐC TẾ 3S
 ---
 Vị trí: .NET CORE
 
-Lương: 15-25tr
+Lương: upto 1500$
 
 Địa điểm làm việc: Tòa nhà Kim Ánh, ngõ 78 Duy Tân, HN
 
@@ -20,7 +20,7 @@ Số lượng: 2
  - Phát triển ứng dụng mới khi có yêu cầu thay đổi
 
 **II. YÊU CẦU**
-- Có trên 1 năm kinh nghiệm: .NET, C#, ASP.NET, ASP.NET MVC, Entity Framework, SQL …
+- Có trên 3 năm kinh nghiệm: .NET, C#, ASP.NET, ASP.NET MVC, Entity Framework, SQL …
 - Thành thạo về hệ quản trị cơ sở dữ liệu MS SQL
 - Thành thạo về HTML, CSS, jQuery, AJAX, Bootstrap
 - Có kinh nghiệm hoặc đã được học về UI/UX, triển khai website responsive
@@ -30,7 +30,7 @@ Số lượng: 2
 
 
 **III. QUYỀN LỢI**
-- Mức offer: 15-25tr
+- Mức offer: upto 1500$
 - Lương thưởng tháng 13
 - Review career path định kỳ 1 lần/năm. Có định hướng career path rõ rang.
 - Thưởng dự án, thưởng cá nhân theo năng lực sau mỗi dự án
@@ -49,5 +49,5 @@ Thông tin khác:
 - Website: https://3si.vn/
 - Fanpage: https://www.facebook.com/3si.vn
 Contact HR
-- Ms Trang: 0346.986.436 - Skype: trang.ntt291
+- Ms Trang: 0385.991.928 - Skype: trang.ntt291
 - Emai: trang.ntt@3si.vn
